--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 /*HOME.JSX CSS*/
 .sectionclass{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -56,12 +56,7 @@
   background-color: transparent;
 }
 
-.sectionclass article:nth-child(5) {
-  background-color: transparent;
-}
-.sectionclass article:nth-child(6) {
-  background-color: transparent;
-}
+
 
 @keyframes hueChange {
   0% {
