--- a/src/App.css
+++ b/src/App.css
@@ -164,3 +164,43 @@ p{
   border-radius: 25px;
   background: black;
 }
+
+/*CALCULATOR*/
+.button-container{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-content: center;
+  gap: 1rem;
+  align-items: center;
+  border-radius: 20px;
+  background: rgb(107, 102, 102);
+  color: white;
+  padding: 2rem;
+}
+.calculator{
+  display: flex;
+  flex-direction: column;
+  gap:2rem;
+  align-items: center;
+  justify-content: center;
+  padding: 2rem;
+  background: gray;
+  border-radius: 12px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.8);
+
+}
+.calculatorscreen{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 5rem;
+  width: 100%;
+  border-radius: 12px;
+  background: #23c483;
+}
+.summaryclass{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: first baseline;
+}
